--- a/templates/craft_sicherungWebsite/templates/projekte/programme.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme.html
@@ -32,7 +32,7 @@
   </div>
 
 
-    <div class="container zwoelferspaltenlayout">
+    <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
       <div class="card-deck">
         <div class="row">
 
