--- a/templates/craft_sicherungWebsite/templates/projekte/wowirarbeiten.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/wowirarbeiten.html
@@ -41,26 +41,34 @@
       {# For each entry we find, do this #}
       {% for entry in entries %}      {% set counter = counter + 1 %}
 
-        <h4>{{ entry.title }}</h4>
-        <div id="copy"> {{ entry.text }} </div>
+        <h4 style="padding-bottom: 1rem;">{{ entry.title }}</h4>
+        <div id="copy" style="padding-bottom: 2rem;"> {{ entry.text }} </div>
 
       {% if counter == 1 %}   </div>
       <div class="container-fluid no-padding" style="background-color: #f8f5f2; padding-top: 0;">
         <div class="row">
-          <div class="col-1"> </div>
-          <div class="col-5"> </div>
-          <div class="col-6">
-          <img class="img-fluid" style="padding-bottom: 0;" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
+          <div class="col-md-3 col-sm-1 col-1"> </div>
+          <div class="col-md-4 col-sm-5 col-5" id="copy" style="display: flex; align-items: center;">
+            <span style="width: 100%;">
+            <strong> Provinz Oxapampa </strong>  <br>
+            19000 km² <br> <hr style="border-top: 2px solid #ed6e2c; margin-bottom: 0; margin-top: 0;">
+            Regenwald <br> <hr style="border-top: 2px solid #ed6e2c; margin-bottom: 0; margin-top: 0;">
+            Andenvorgebirge <br> <hr style="border-top: 2px solid #ed6e2c; margin-bottom: 0; margin-top: 0;">
+            XXX Einwohner <hr style="border-top: 2px solid #ed6e2c; margin-bottom: 0; margin-top: 0;">
+          </span>
+          </div>
+          <div class="col-md-5 col-sm-6 col-6">
+          <img class="img-fluid w-100 h-100" style="padding-bottom: 0;" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
         </div>
         </div>
       </div> <!-- Nach dem ersten Durchlauf der for-schleife wird die Peru-Karte eingefuegt -->
-    <div class="container achterspaltenlayout">
+    <div class="container achterspaltenlayout" style="padding-top: 2rem;">
     {% endif %}
 
       {% endfor %}
   {% endif %}
 
-</div>
+</div> <!--Bei der ersten For-Schleife wird das Bild eingefügt, danach kommen nur noch die Texte -->
 
 {% set entry = craft.entries.section('fuerSie').slug('chancengeber').one() %}
 <div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }})">
@@ -72,7 +80,7 @@
   </div>
 </div> <!-- Das Wolkenbild mit den Zitaten drin -->
 
-<div class="container achterspaltenlayout text-center">
+<div class="container achterspaltenlayout text-center" style="padding-top: 2rem; padding-bottom: 0;">
   {% set entry = craft.entries.section('projekte').slug('kenia').one() %}
   <h2> {{ entry.title }} </h2>
   <div id="anleser"> {{ entry.anleser }} </div>
@@ -96,12 +104,21 @@
 
         {% if counter == 2 %}   </div>
         <div class="container-fluid no-padding" style="background-color: #f8f5f2; padding-top: 0; margin-bottom: 3rem;">
+
           <div class="row">
-            <div class="col-6">
-            <img class="img-fluid" style="padding-bottom: 0;" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
-          </div>
-          <div class="col-5"> </div>
-          <div class="col-1"> </div>
+            <div class="col-md-5 col-sm-6 col-6">
+            <img class="img-fluid w-100 h-100" style="padding-bottom: 0;" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
+            </div>
+            <div class="col-md-4 col-sm-5 col-5" id="copy" style="display: flex; align-items: center;">
+              <span style="width: 100%;">
+              <strong> Narok County </strong>  <br> <br>
+              19000 km² <br> <hr style="border-top: 2px solid #ed6e2c; margin-bottom: 0; margin-top: 0;">
+              Savannen und Buschland <br> <hr style="border-top: 2px solid #ed6e2c; margin-bottom: 0; margin-top: 0;">
+              Maasai-Ebenen <br> <hr style="border-top: 2px solid #ed6e2c; margin-bottom: 0; margin-top: 0;">
+              900.000 Einwohner <hr style="border-top: 2px solid #ed6e2c; margin-bottom: 0; margin-top: 0;">
+            </span>
+            </div>
+            <div class="col-md-3 col-sm-1 col-1"> </div>
           </div>
         </div> <!-- Nach dem zweiten Durchlauf der for-schleife wird die Kenia-Karte eingefuegt -->
       <div class="container achterspaltenlayout">
