--- a/templates/craft_sicherungWebsite/templates/ueberUns/verein.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/verein.html
@@ -7,9 +7,9 @@
 
 <div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
 
-<img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
-<div class="container achterspaltenlayout" style="padding-top: 0px;">
+  <div class="container achterspaltenlayout" style="padding-top: 0px;">
     {% set entry = craft.entries.section('ueberUns').slug('der-verein').one() %}
     <h1 style="padding-bottom: 30px;"> {{ entry.zusatzfeld1 }}  </h1>
     <div id="anleser">  {{ entry.langerText }} </div>
@@ -38,62 +38,63 @@
 
 <div class="container-fluid no-padding  text-center" style="background-color: #ffffff;">
 
-<div class="container achterspaltenlayout">
-  {% set entry = craft.entries.section('ueberUns').slug('team').one() %}
-  <h2> {{ entry.title }} </h2>
-  <div id="anleser"> {{ entry.anleser }} </div>
-</div>
+  <div class="container achterspaltenlayout">
+    {% set entry = craft.entries.section('ueberUns').slug('team').one() %}
+    <h2> {{ entry.title }} </h2>
+    <div id="anleser"> {{ entry.anleser }} </div>
+  </div>
 
-<div class="container zwoelferspaltenlayout">
-  <div class="card-deck">
-    <div class="row">
-      {% set entries = craft.entries.section('ueberUns').slug('team').one().children().all() %}
-      {% set counter = 0 %}
-      {% for entry in entries %}  {% if entry.slug != 'fuelleintrag' %}
-      {% set counter = counter + 1 %}
-      <div class="col-md-4" style="padding-bottom: 50px;">
-      <div class="card bg-white h-100">
-        <img class="card-img-top rounded-circle mx-auto d-block" style="max-height: 160px; max-width: 160px;" src=" {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
-        <div class="card-body">
-          <div id="copy"> {{ entry.anleser }} </div>
-          <div id="copy" style="color: #ed6e2c"> {{ entry.text }}</div>
+  <div class="container zwoelferspaltenlayout">
+    <div class="card-deck">
+      <div class="row">
+        {% set entries = craft.entries.section('ueberUns').slug('team').one().children().all() %}
+        {% set counter = 0 %}
+        {% for entry in entries %}  {% if entry.slug != 'fuelleintrag' %}
+        {% set counter = counter + 1 %}
+        <div class="col-md-4" style="padding-bottom: 50px;">
+          <div class="card bg-white h-100">
+            <img class="card-img-top rounded-circle mx-auto d-block" style="max-height: 160px; max-width: 160px;" src=" {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+            <div class="card-body">
+              <div id="copy"> {{ entry.anleser }} </div>
+              <div id="autor" class=""> {{ entry.reinertext }}</div>
+              <div id="copy" style="color: #ed6e2c"> {{ entry.langerText }} </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    {% if counter == 3 %}  <div class="col-2"> </div> {% endif %}
-    {% endif %}
-      {% endfor %}
+        {% if counter == 3 %}  <div class="col-2"> </div> {% endif %}
+        {% endif %}
+        {% endfor %}
       </div>
     </div>
   </div>
 
 
-{% set entry = craft.entries.section('fuerSie').slug('chancengeber').one() %}
-<div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }})">
-  <div class="container achterspaltenlayout text-center">
-    {% set entries = entry.children().all() %}
-    {% set entry = random(entries) %}
-    <div id="zitat"  style="padding-bottom: 0px;"> {{ entry.text }}  </div>
-    <div id="autor"> {{ entry.title }}  </div>
+  {% set entry = craft.entries.section('fuerSie').slug('chancengeber').one() %}
+  <div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }})">
+    <div class="container achterspaltenlayout text-center">
+      {% set entries = entry.children().all() %}
+      {% set entry = random(entries) %}
+      <div id="zitat"  style="padding-bottom: 0px;"> {{ entry.text }}  </div>
+      <div id="autor"> {{ entry.title }}  </div>
+    </div>
+  </div> <!-- Das Wolkenbild mit den Zitaten drin -->
+
+
+  <div class="container achterspaltenlayout" style="padding-top: 3rem;">
+    {% set entry = craft.entries.section('ueberUns').slug('geschichte').one() %}
+    <h2> {{ entry.title }} </h2>
+    <div id="anleser"> {{ entry.anleser }} </div>
   </div>
-</div> <!-- Das Wolkenbild mit den Zitaten drin -->
 
+  <div class="container zwoelferspaltenlayout" style="padding-top: 0">
+    <img class="img-fluid" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+  </div>
 
-<div class="container achterspaltenlayout" style="padding-top: 3rem;">
-  {% set entry = craft.entries.section('ueberUns').slug('geschichte').one() %}
-  <h2> {{ entry.title }} </h2>
-  <div id="anleser"> {{ entry.anleser }} </div>
-</div>
-
-<div class="container zwoelferspaltenlayout" style="padding-top: 0">
-  <img class="img-fluid" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
-</div>
-
-<div class="container achterspaltenlayout">
-  {% set entry = craft.entries.section('ueberUns').slug('erste-kontakte').one() %}
-  <h4> {{ entry.title }} </h4>
-  <div id="copy"> {{ entry.text }} </div>
-</div>
+  <div class="container achterspaltenlayout">
+    {% set entry = craft.entries.section('ueberUns').slug('erste-kontakte').one() %}
+    <h4> {{ entry.title }} </h4>
+    <div id="copy"> {{ entry.text }} </div>
+  </div>
 </div>
 
 
@@ -111,44 +112,55 @@
   </div>
 </div> <!-- Der orange Berg mit dem Spendenaufruf -->
 
-<div class="container-fluid no-padding  text-center" style="background-color: #ffffff; padding-bottom: 3rem;">
+<div class="container-fluid no-padding text-center" style="background-color: #ffffff; padding-bottom: 3rem;">
 
-<div class="container-fluid no-padding">
-  {% set entry = craft.entries.section('ueberUns').slug('kooperationspartner').one() %}
-  <h2> {{ entry.title }} </h2>
-</div>
+  <div class="container-fluid no-padding">
+    {% set entry = craft.entries.section('ueberUns').slug('kooperationspartner').one() %}
+    <h2> {{ entry.title }} </h2>
+  </div>
 
-  <div class="card-deck">
+<div class="container">
+
     <div class="row">
       {% set entries = entry.children().all() %} {% set counter = 0 %}
-      {% for entry in entries %} {% set counter = counter + 1 %}
-      <div class="col-sm-2" style="padding: 0; margin-top: 1px;">
-    <a href="{{ entry.reinertext }}">
-      <div class="card w-100">
-        <img class="card-img-top mx-auto d-block grayscale"
-         src=" {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+      <div class="col-sm-6">
+        <div class="row">
+        {% for entry in entries %} {% set counter = counter + 1 %}
+      <div class="col-4" style="padding-right: 0; padding-left: 0;">
+       <a href="{{ entry.reinertext }}" >
+            <img class="card-img-top grayscale" style="border: 2px solid #f8f5f2;"
+            src=" {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+        </a>
       </div>
-    </a>
-    </div>
+
+        {% if counter is divisible by(3) %}
+        </div>
+      </div>      <div class="col-sm-6"> <div class="row">
+      {% endif %}
       {% endfor %}
+    </div>
+  </div>
+
       {# Durch divisible by 6 wird das Feld immer ausgefüllt bis 6 Spalten #}
-    {% if counter is not divisible by(6) %}
-        {% for i in 0..10000 if counter is not divisible by(6) %}
-          <div class="col-sm-2" style="padding: 0;">
-            <div class="card w-100 h-100" > </div>
-          </div>
-          {% set counter = counter + 1 %}
-        {% endfor %}
-     {% endif %}
+      {% if counter is not divisible by(6) %}
+      {% for i in 0..10000 if counter is not divisible by(6) %}
+      <div class="col-sm-2" style="padding: 0;">
+        <div class="card" > </div>
       </div>
-    </div>
-    <div class="container zwoelferspaltenlayout">
+      {% set counter = counter + 1 %}
+      {% endfor %}
+      {% endif %}
+    </div> <!-- Row der Bilder -->
+  </div>
+
+
+  <div class="container zwoelferspaltenlayout">
     <hr style="height: 2px; padding-top: 1rem;"> <p id="anleser" class="text-center"> Erfahren Sie mehr über uns </p>
-    </div>
+  </div>
 
-    {% set entry = craft.entries.section('ueberUns').slug('transparenz').one() %}
+  {% set entry = craft.entries.section('ueberUns').slug('transparenz').one() %}
 
-    <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
+  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
     <div class="row">
       <div class="col-md-4">
         <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
@@ -158,8 +170,8 @@
         <div id="copy"> {{ entry.text }}</div>
       </div>
     </div>
-    </div> <!-- Weitere Informationen zum Konzept -->
+  </div> <!-- Weitere Informationen zum Konzept -->
 
-    </div> <!-- Weißer Hintergrundcontainer -->
+</div> <!-- Weißer Hintergrundcontainer -->
 
 {% endblock %}
