--- a/templates/craft_sicherungWebsite/templates/projekte/wowirarbeiten.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/wowirarbeiten.html
@@ -9,10 +9,10 @@
 
 <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
-<div class="container achterspaltenlayout" style="padding-top: 0px;">
-  <div style="padding-bottom:80px; ">
+<div class="container achterspaltenlayout" style="padding-top: 0px; padding-bottom: 0;">
+  <div style="padding-bottom:3rem; ">
     <h1 style="padding-bottom: 30px;"> Chance e.V. ist in Peru und Kenia aktiv   </h1>
-    <p id="anleser"> In den Regenwäldern Amazoniens und den Savannen am Rande der Maasai Mara.  </p>
+    <p id="anleser" style="padding-bottom: 0;"> In den Regenwäldern Amazoniens und den Savannen am Rande der Maasai Mara.  </p>
     </div>
   </div>
 </div>
@@ -23,7 +23,7 @@
 <div class="container achterspaltenlayout text-center">
   <h2> {{ entry.title }} </h2>
   <div id="anleser"> {{ entry.anleser }} </div>
-  <div class="container zwoelferspaltenlayout">
+  <div class="container zwoelferspaltenlayout" style="padding-top: 3rem;">
     <img class="img-fluid mx-auto d-block"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
   </div>
 </div>
@@ -140,15 +140,15 @@
   </div> <!-- Zufälliges Zitat -->
 
   {% set entry = craft.entries.section('fuerSie').slug('fuelleintrag').one() %}
-  <div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
+  <div class="container-fluid no-padding"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }});">
     <div class="row">
-      <div class="col-1">  </div>
-      <div class="col-2">   <img class="img-fluid" src="{{ entry.bild2.inReverse().one().url }}" style="max-height: 200px;"> </div>
-      <div class="col-1">  </div>
-      <div class="col-7">
-        <h4 style="color: white;"> Länderpate werden </h4>
+      <div class="col-md-1">  </div>
+      <div class="col-md-2">   <img class="img-fluid mx-auto d-block" src="{{ entry.bild2.inReverse().one().url }}" style="max-height: 150px; padding-bottom: 10px;"> </div>
+      <div class="col-md-1">  </div>
+      <div class="col-md-7" style="padding-left: 30px;">
+        <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
         <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
-        <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Länderpate werden</a>
+        <a href="https://aufbau-website.de/craft/web/spenden" class="btn btn-primary" role="button">Jetzt Länderpate werden</a>
       </div>
     </div>
   </div> <!-- Der orange Berg mit dem Spendenaufruf -->
