--- a/templates/craft_sicherungWebsite/web/CSSundJS/stylevorgaben.css
+++ b/templates/craft_sicherungWebsite/web/CSSundJS/stylevorgaben.css
@@ -1,40 +1,40 @@
 
 
 @font-face {
-    font-family: 'source_sans_prosemibold';
-    src: url('fonts/source-sans-pro-semibold-webfont.woff2') format('woff2'),
-         url('fonts/source-sans-pro-semibold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'source_sans_prosemibold';
+  src: url('fonts/source-sans-pro-semibold-webfont.woff2') format('woff2'),
+  url('fonts/source-sans-pro-semibold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'nerisblack';
-    src: url('fonts/nerisblack-webfont.woff2') format('woff2'),
-         url('fonts/nerisblack-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-
-@font-face {
-    font-family: 'source_sans_prolight';
-    src: url('fonts/source-sans-pro-light-webfont.woff2') format('woff2'),
-         url('fonts/source-sans-pro-light-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'nerisblack';
+  src: url('fonts/nerisblack-webfont.woff2') format('woff2'),
+  url('fonts/nerisblack-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 
 }
 
 
 @font-face {
-    font-family: 'bellotabold_italic';
-    src: url('fonts/bellota-bold-italic-webfont.woff2') format('woff2'),
-         url('fonts/bellota-bold-italic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'source_sans_prolight';
+  src: url('fonts/source-sans-pro-light-webfont.woff2') format('woff2'),
+  url('fonts/source-sans-pro-light-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+
+@font-face {
+  font-family: 'bellotabold_italic';
+  src: url('fonts/bellota-bold-italic-webfont.woff2') format('woff2'),
+  url('fonts/bellota-bold-italic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 /* Entfernt das standardmäßige Padding der container-fluid klassen */
@@ -53,7 +53,7 @@
 /* Die Stylevorgabe, die für Text in der Website verwendet wird. */
 .zwoelferspaltenlayout {
   max-width: 1160px;
-	padding-top: 50px;
+  padding-top: 50px;
 }
 
 .img-fluid {
@@ -72,37 +72,37 @@ h2 {
   line-height: 46px;
   color: #ed6e2c;
   font-family: 'nerisblack';
-	padding-bottom: 30px;
+  padding-bottom: 30px;
 }
 
 h3 {
   font-size: 24px;
-	line-height: 28px;
+  line-height: 28px;
   color: #ed6e2c;
   padding-bottom: 7px;
-	font-family: 'nerisblack';
+  font-family: 'nerisblack';
 }
 
 h4 {
-	font-size: 18px;
-	line-height: 28px;
-	color: #000000;
-	font-family: 'source_sans_prosemibold';
+  font-size: 18px;
+  line-height: 28px;
+  color: #000000;
+  font-family: 'source_sans_prosemibold';
 }
 
 #anleser {
   font-size: 24px;
-	line-height: 34px;
+  line-height: 34px;
   font-family: 'source_sans_prolight';
   color: #333333;
-	padding-bottom: 30px;
+  padding-bottom: 30px;
 }
 
 #copy {
-	font-size: 18px;
-	line-height: 28px;
-	font-family: 'source_sans_prolight';
-	color: #000000;
+  font-size: 18px;
+  line-height: 28px;
+  font-family: 'source_sans_prolight';
+  color: #000000;
 }
 
 #info-head {
@@ -123,7 +123,7 @@ h4 {
   color: #0062ae;
   font-family: 'bellotabold_italic';
   padding-bottom: 20px;
-  }
+}
 
 #autor {
   font-size: 16px;
@@ -132,133 +132,135 @@ h4 {
   font-family: 'source_sans_prosemibold';
 }
 
-#kind {
-  max-height: 280px;
-}
 
-#navlinksFooter a { /* Die Links im Footer weiß einfärben */
-    color: #d7d7d7;
-}
-#navlinksFooter h4 {
-  color: #d7d7d7;
-}
+@media all and (max-width: 1100px) and (min-width: 700px) {
 
-#footerHandy a { /* Die Links im Footer weiß einfärben */
-    color: #d7d7d7;
-}
-#footerHandy h4 {
-  color: #d7d7d7;
-}
-#footerHandy p {
-  margin-bottom: 0;
-}
-
-
-@media all and (max-width: 700px)  {
   h1 {
-    font-size: 31px;
-    line-height: 36px; }
+    font-size: 41px;
+    line-height: 48px; }
+
+    h2 {
+        font-size: 32px;
+        line-height: 36px;
+      }
 
     #anleser {
-      font-size: 19px;
-      line-height: 27px;
-    }
-  }
+      font-size: 21px;
+      line-height: 31px;  }
 
-  @media all and (max-width: 1100px) and (min-width: 700px) {
+      #copy {
+        font-size: 16px;
+        line-height: 25px;
+      }
+
+    }
+
+  @media all and (max-width: 700px)  {
+    html {
+      font-size: 10px;
+    }
+
     h1 {
-      font-size: 41px;
-      line-height: 48px; }
+      font-size: 31px;
+      line-height: 36px; }
 
-  #anleser {
-    font-size: 21px;
-    line-height: 31px;  }
+    h2 {
+        font-size: 24px;
+        line-height: 27px;
+      }
 
-    #kind {
-      max-height: 400px;
+      #anleser {
+        font-size: 19px;
+        line-height: 27px;
+      }
+
+      #copy {
+        font-size: 14px;
+        line-height: 22px;
+      }
+
     }
-  }
 
-/* Bei den Empfehlungs-boxen wird so die Umrandung entfernt */
-.bg-white {
-        border: 0;
+    /* Bei den Empfehlungs-boxen wird so die Umrandung entfernt */
+    .bg-white {
+      border: 0;
     }
 
-/* Auf der Projekt-Uebersicht werden die horizontalruler weis gefaerbt
-und enger aneinander geklebt */
-#horizontalrulerweis hr {
-  background-color: white;
-  color: #ed6e2c;
-  margin-top: .5rem;
-  margin-bottom: .5rem;
-}
+    /* Auf der Projekt-Uebersicht werden die horizontalruler weis gefaerbt
+    und enger aneinander geklebt */
+    #horizontalrulerweis hr {
+      background-color: white;
+      color: #ed6e2c;
+      margin-top: .5rem;
+      margin-bottom: .5rem;
+    }
 
-#horizontalrulerweis p {
-  margin-bottom: 0px;
-}
+    #horizontalrulerweis p {
+      margin-bottom: 0px;
+    }
 
-/* Wenn bei den Tabs einer angeklickt wird, wird der aktive grau hinterlegt */
-.nav-link.active.tab {
-  background-color: #f8f5f2;
-  color: #0062ae;
-  font-weight: bold;
-}
+    /* Wenn bei den Tabs einer angeklickt wird, wird der aktive grau hinterlegt */
+    .nav-link.active.tab {
+      background-color: #f8f5f2;
+      color: #0062ae;
+      font-weight: bold;
+    }
 
-.nav-link.tab {
-  color: #0062ae;
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
+    .nav-link.tab {
+      color: #0062ae;
+      padding-left: 3rem;
+      padding-right: 3rem;
+    }
 
-.card-link:after {
-  content: '\003C'; /* Unicode character for "plus" sign (+) */
-   font-size: 30px;
-   color: #0062ae;
-   float: right;
-   margin-top: -45px;
-   transform: rotate(-90deg);
-}
+    .card-link:after {
+      content: '\003C'; /* Unicode character for "plus" sign (+) */
+      font-size: 30px;
+      color: #0062ae;
+      float: right;
+      margin-top: -45px;
+      transform: rotate(-90deg);
+    }
 
-.carousel-control-prev-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%6c757d' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
-    margin-left: -100%;
-}
+    .carousel-control-prev-icon {
+      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%6c757d' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+      margin-left: -100%;
+    }
 
-.carousel-control-next-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%6c757d' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
-    margin-right: -100%;
-}
+    .carousel-control-next-icon {
+      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%6c757d' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+      margin-right: -100%;
+    }
 
-/* Die Bilder von Empfehlungen grau werden lassen und farbig beim hovern */
-.grayscale {
-  filter: gray; /* IE6-9 */
-  -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
-  filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
-}
+    /* Die Bilder von Empfehlungen grau werden lassen und farbig beim hovern */
+    .grayscale {
+      filter: gray; /* IE6-9 */
+      -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+      filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
+    }
 
-/* Disable grayscale on hover */
-.grayscale:hover {
-  -webkit-filter: grayscale(0);
-  filter: none;
-}
+    /* Disable grayscale on hover */
+    .grayscale:hover {
+      -webkit-filter: grayscale(0);
+      filter: none;
+    }
 
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: pink;
-}
-::-moz-placeholder { /* Firefox 19+ */
-  color: pink;
-}
-:-ms-input-placeholder { /* IE 10+ */
-  color: pink;
-}
-:-moz-placeholder { /* Firefox 18- */
-  color: pink;
-}
+    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+      color: pink;
+    }
+    ::-moz-placeholder { /* Firefox 19+ */
+      color: pink;
+    }
+    :-ms-input-placeholder { /* IE 10+ */
+      color: pink;
+    }
+    :-moz-placeholder { /* Firefox 18- */
+      color: pink;
+    }
 
-.form-control {
-  background-color: #f8f5f2;
-} /* Hintergrund der Formulare auf der Kontaktseite */
+    .form-control {
+      background-color: #f8f5f2;
+      } /* Hintergrund der Formulare auf der Kontaktseite */
 
-body {
-  background-color: #f8f5f2;
-}
+      body {
+        background-color: #f8f5f2;
+      }
